# matrix-multiplication-fort

./: CMakeLists.txt  README.md  main.F90  run_mm.F90  times.py
results/: mm.txt  mm0.txt  mm1.txt  mm2.txt  mm3.txt
src/: main.F90  matrix_multiplication.F90  run_mm.F90
tests/: makefile  matrix_multiplicationTest.pf  testSuites.inc
